@@ -1,5 +1,11 @@
 2006-01-23  Yves Combe  <yves@ycombe.net>
 
+	constraint resize icon.
+
+	* src/boards/menu2.c: (menu_create_item):
+
+2006-01-23  Yves Combe  <yves@ycombe.net>
+
 	add background for menu2, with the differents zones. 
 
 	* boards/skins/gartoon/gcompris-menu2bg.png:
